# rune

./: .gitmodules  .ignore  CMakeLists.txt  TODO.md
assets/soulside/: info.txt
examples/: CMakeLists.txt  font_data.h  hello_world.c  renderer.c  renderer.h
include/: font.h  new_renderer.h  renderer.h  rune.h  rune_font.h  rune_tessellation.h  ui.h
include/rune/: rune.h
src/: demo.c  font.c  main.c  new_renderer.c  renderer.c  rune.c  rune_font.c  rune_internal.h  rune_tessellation.c  ui.c
